# dakara-server

./: .gitignore  .travis.yml  AOServer.sln  AOServer.vcxproj  AOServer.vcxproj.filters  AUTHORS.md  CMakeLists.txt  README.md  appveyor.yml  build.py  packages.config  run-linux32.sh  run-linux64-valgrind.sh  run-linux64.sh
.github/workflows/: build-mingw.yml  build-msvc.yml
Debug/: server.ini
Debug/Charfile/: ASD.chr  GS.chr  LORD FERS.chr
Debug/WorldBackup/: mapa1.map  mapa10.map  mapa11.map  mapa111.map  mapa112.map  mapa113.map  mapa114.map  mapa115.map  mapa116.map  mapa12.map  mapa14.map  mapa140.map  mapa141.map  mapa142.map  mapa143.map  mapa144.map  mapa145.map  mapa146.map  mapa150.map  mapa151.map  mapa156.map  mapa162.map  mapa163.map  mapa165.map  mapa166.map  mapa167.map  mapa168.map  mapa169.map  mapa170.map  mapa171.map  mapa172.map  mapa173.map  mapa174.map  mapa175.map  mapa176.map  mapa177.map  mapa178.map  mapa179.map  mapa184.map  mapa186.map  (+78 more)
attic/: .travis.yml  appveyor.yml  build.py
attic/.github/workflows/: build-ubuntu.yml
cmake/Modules/: FindLibevent2.cmake
doc/: HISTORY.md
scripts/: server-resources-to-utf8.sh
src/: Acciones.cpp  Acciones.h  Admin.cpp  Admin.h  AntiMassClon.cpp  AntiMassClon.h  Areas.cpp  Areas.h  Banco.cpp  Banco.h  ByteBuffer.cpp  ByteBuffer.h  ByteQueue.cpp  ByteQueue.h  Centinela.cpp  Centinela.h  Characters.cpp  Characters.h  Clan.cpp  Clan.h  ClanPretoriano.cpp  ClanPretoriano.h  Clanes.cpp  Clanes.h  Comercio.cpp  Comercio.h  ComercioUsuario.cpp  ComercioUsuario.h  ConsultasPopulares.cpp  ConsultasPopulares.h  Crypto.cpp  Crypto.h  Declares.cpp  Declares.h  Facciones.cpp  Facciones.h  FileIO.cpp  FileIO.h  Forum.cpp  Forum.h  (+75 more)
